// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Button ButtonGroup 1`] = `
<div
  className="sc-bxivhb HBikN"
  style={null}
>
  <button
    className="sc-ifAKCX lgHGEf"
    onClick={[Function]}
    selected={false}
    size="medium"
    style={null}
  >
    Button
  </button>
  <button
    className="sc-ifAKCX lgHGEf"
    onClick={[Function]}
    selected={false}
    size="medium"
    style={null}
  >
    Button
  </button>
  <button
    className="sc-ifAKCX lgHGEf"
    onClick={[Function]}
    selected={false}
    size="medium"
    style={null}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Components | Button Circular style 1`] = `
<button
  className="sc-ifAKCX gcTbGz"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  <svg
    height={16}
    onClick={[Function]}
    viewBox="0 0 804.5714285714286 1024"
    width={16}
  >
    <path
      d="M804.571 420.571v109.714c0 30.286-24.571 54.857-54.857 54.857h-237.714v237.714c0 30.286-24.571 54.857-54.857 54.857h-109.714c-30.286 0-54.857-24.571-54.857-54.857v-237.714h-237.714c-30.286 0-54.857-24.571-54.857-54.857v-109.714c0-30.286 24.571-54.857 54.857-54.857h237.714v-237.714c0-30.286 24.571-54.857 54.857-54.857h109.714c30.286 0 54.857 24.571 54.857 54.857v237.714h237.714c30.286 0 54.857 24.571 54.857 54.857z"
      fill="#3b5998"
    />
  </svg>
</button>
`;

exports[`Storyshots Components | Button Default 1`] = `
<button
  className="sc-ifAKCX lgHGEf"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Default Button
</button>
`;

exports[`Storyshots Components | Button Disable 1`] = `
<button
  className="sc-ifAKCX lgHGEf"
  disabled={true}
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Disable Button
</button>
`;

exports[`Storyshots Components | Button Flat 1`] = `
<button
  className="sc-ifAKCX hEkazX"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Flat Button
</button>
`;

exports[`Storyshots Components | Button Light 1`] = `
<button
  className="sc-ifAKCX hYuTIy"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Light Button
</button>
`;

exports[`Storyshots Components | Button Link 1`] = `
<button
  className="sc-ifAKCX ejdaYI"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Link Button
</button>
`;

exports[`Storyshots Components | Button Subtle 1`] = `
<button
  className="sc-ifAKCX iisouQ"
  onClick={[Function]}
  selected={false}
  size="medium"
  style={null}
>
  Subtle Button
</button>
`;
